--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,7 +56,7 @@
                                         </select>
                                     </div>
                                     <div class="col-auto my-1">
-                                        <button type="button" class="btn btn-danger">Tìm kiếm </button>
+                                        <button type="submit" class="btn btn-danger">Tìm kiếm </button>
                                     </div>
 
                                 </div>
