--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,10 +59,9 @@
                                     </select>
                                 </div>
                                 <div class="col-auto my-1">
-
-                                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"
-                                            [disabled]="keyword == 0"><span><i
-                                            class="fas fa-search"></i></span></button>
+s
+                                    <button class="btn btn-outline-danger my-2 my-sm-0" type="submit"
+                                            [disabled]="keyword == 0">Tìm kiếm</button>
                                 </div>
                             </div>
                         </form>
