create form login&register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!--<app-booking-home3></app-booking-home3>-->
-<!--<app-home></app-home>-->
-
-<!--<app-view-detail></app-view-detail>-->
-<router-outlet></router-outlet>
+<div class="container-fluid col-xs-12 col-lg col-md-6 ">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</div>
