--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -91,7 +91,7 @@
                         </thead>
                         <thead>
                         <tr>
-                            <p>Nếu quý khách có nhu cầu về giờ nhận và trả phòng khác với quy định chung của CodeGym,
+                            <p>Nếu quý khách có nhu cầu về giờ nhận và trả phòng khác với quy định chung của HomeCodeGym,
                                 quý khách vui lòng liên hệ số điện thoại 0983692323 (miễn phí) để được hỗ trợ tốt
                                 nhất</p>
 
