--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -318,101 +318,102 @@
 <!--end_Q/cao-->
 
 
-            <!-- Footer -->
-            <div>
-                <footer class="page-footer font-small unique-color-dark" style="margin-top: 20px">
+<!-- Footer -->
+<div>
+    <footer class="page-footer font-small unique-color-dark" style="margin-top: 20px">
 
-<!--introduce-->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-1 col-sm-4 col-xs-12">
-            <!--#-->
-        </div>
-
-
-        <div class="col-md-10 col-sm-4 col-xs-12">
-            <h4 class="text-uppercase font-weight-bold"
-                style="margin-top: 30px; margin-bottom: 30px">Gợi ý từ
-                HomeCodeGym</h4>
+        <!--introduce-->
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-6 col-md-3 " *ngFor="let house of houses">
-
-                    <img style="width: 100%" alt="Điểm đến hàng đầu" class=" lazyloaded shake"
-                         src="http://127.0.0.1:8000/storage/{{house.image[0]}}" height="150">
-                    <a style="color: black" [routerLink]="['/show', house.id]"><h3>{{house.title}}</h3></a>
-                    <div class="price">{{house.price.toLocaleString('vi') + 'VND ngày/đêm'}}</div>
-
-
-                    <div *ngIf="house.status === 'Chưa cho thuê';else status">
-                        <div class="status"
-                             style="background-color: lightgreen; text-align: center;  margin-bottom: 20px">{{house.status}}</div>
-                    </div>
-                    <ng-template #status>
-                        <div class="status"
-                             style="background-color: chartreuse; text-align: center;  margin-bottom: 20px">{{house.status}}</div>
-                    </ng-template>
+                <div class="col-md-1 col-sm-4 col-xs-12">
+                    <!--#-->
                 </div>
-            </div>
 
 
-        </div>
-        <div class="col-md-1 col-sm-4 col-xs-12">
-            <!--#-->
-        </div>
-    </div>
-</div>
-<!--end_introduce-->
+                <div class="col-md-10 col-sm-4 col-xs-12">
+                    <h4 class="text-uppercase font-weight-bold"
+                        style="margin-top: 30px; margin-bottom: 30px">Gợi ý từ
+                        HomeCodeGym</h4>
+                    <div class="row">
+                        <div class="col-6 col-md-3 " *ngFor="let house of houses">
 
-<!--introduce-->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-1 col-sm-4 col-xs-12">
-            <!--#-->
-        </div>
-        <div class="col-md-10 col-sm-4 col-xs-12">
-            <div class="row">
-                <div class="col-4 col-sm-4 col-xs-12">
-                    <div class="advantages-thumb"><img class=" lazyloaded"
-                                                       data-src="https://cdn.luxstay.com/home/talk/talk_11072018100744.png"
-                                                       src="https://cdn.luxstay.com/home/talk/talk_11072018100744.png">
+                            <img style="width: 100%" alt="Điểm đến hàng đầu" class=" lazyloaded shake"
+                                 src="http://127.0.0.1:8000/storage/{{house.image[0]}}" height="150">
+                            <a style="color: black" [routerLink]="['/show', house.id]"><h3>{{house.title}}</h3></a>
+                            <div class="price">{{house.price.toLocaleString('vi') + 'VND ngày/đêm'}}</div>
+
+
+                            <div *ngIf="house.status === 'Chưa cho thuê';else status">
+                                <div class="status"
+                                     style="background-color: lightgreen; text-align: center;  margin-bottom: 20px">{{house.status}}</div>
+                            </div>
+                            <ng-template #status>
+                                <div class="status"
+                                     style="background-color: chartreuse; text-align: center;  margin-bottom: 20px">{{house.status}}</div>
+                            </ng-template>
+                        </div>
                     </div>
-                    <div class="advantages-txt"><h3>Lần đầu tiên tại Việt Nam</h3>
-                        <p>Ứng dụng cho thuê chỗ ở chuyên nghiệp, đặt phòng tin cậy cho HomeCodeGym cao cấp, căn
-                            hộ dịch vụ
-                            và
-                            biệt thự nghỉ dưỡng.</p></div>
+
 
                 </div>
-                <div class="col-4 col-sm-4 col-xs-12">
-                    <div class="advantages-thumb"><img class=" lazyloaded"
-                                                       data-src="https://cdn.luxstay.com/home/talk/talk_5_1543569870.png"
-                                                       src="https://cdn.luxstay.com/home/talk/talk_5_1543569870.png">
-                    </div>
-                    <div class="advantages-txt"><h3>Sống như người bản địa</h3>
-                        <p>Trải nghiệm không gian bản địa để chuyến du lịch có nhiều màu sắc. Chúng tôi mang đến
-                            những trải
-                            nghiệm hoàn toàn mới nhưng vẫn đảm bảo sự tiện lợi và riêng tư tuyệt đối.</p></div>
-
-                </div>
-                <div class="col-4 col-sm-4 col-xs-12">
-                    <div class="advantages-thumb"><img class=" lazyloaded"
-                                                       data-src="https://cdn.luxstay.com/home/talk/talk_11072018100842.png"
-                                                       src="https://cdn.luxstay.com/home/talk/talk_11072018100842.png">
-                    </div>
-                    <div class="advantages-txt"><h3>Mỗi căn hộ một cá tính riêng</h3>
-                        <p>Từ những căn hộ hiện đại, biệt thự biệt lập cho đến những ngôi nhà truyền thống,
-                            chúng tôi không
-                            ngừng mở rộng danh sách để đem đến sự lựa chọn đa dạng cho khách hàng.</p></div>
-
+                <div class="col-md-1 col-sm-4 col-xs-12">
+                    <!--#-->
                 </div>
             </div>
         </div>
-        <div class="col-md-1 col-sm-4 col-xs-12">
-            <!--#-->
+        <!--end_introduce-->
+
+        <!--introduce-->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-1 col-sm-4 col-xs-12">
+                    <!--#-->
+                </div>
+                <div class="col-md-10 col-sm-4 col-xs-12">
+                    <div class="row">
+                        <div class="col-4 col-sm-4 col-xs-12">
+                            <div class="advantages-thumb"><img class=" lazyloaded"
+                                                               data-src="https://cdn.luxstay.com/home/talk/talk_11072018100744.png"
+                                                               src="https://cdn.luxstay.com/home/talk/talk_11072018100744.png">
+                            </div>
+                            <div class="advantages-txt"><h3>Lần đầu tiên tại Việt Nam</h3>
+                                <p>Ứng dụng cho thuê chỗ ở chuyên nghiệp, đặt phòng tin cậy cho HomeCodeGym cao cấp, căn
+                                    hộ dịch vụ
+                                    và
+                                    biệt thự nghỉ dưỡng.</p></div>
+
+                        </div>
+                        <div class="col-4 col-sm-4 col-xs-12">
+                            <div class="advantages-thumb"><img class=" lazyloaded"
+                                                               data-src="https://cdn.luxstay.com/home/talk/talk_5_1543569870.png"
+                                                               src="https://cdn.luxstay.com/home/talk/talk_5_1543569870.png">
+                            </div>
+                            <div class="advantages-txt"><h3>Sống như người bản địa</h3>
+                                <p>Trải nghiệm không gian bản địa để chuyến du lịch có nhiều màu sắc. Chúng tôi mang đến
+                                    những trải
+                                    nghiệm hoàn toàn mới nhưng vẫn đảm bảo sự tiện lợi và riêng tư tuyệt đối.</p></div>
+
+                        </div>
+                        <div class="col-4 col-sm-4 col-xs-12">
+                            <div class="advantages-thumb"><img class=" lazyloaded"
+                                                               data-src="https://cdn.luxstay.com/home/talk/talk_11072018100842.png"
+                                                               src="https://cdn.luxstay.com/home/talk/talk_11072018100842.png">
+                            </div>
+                            <div class="advantages-txt"><h3>Mỗi căn hộ một cá tính riêng</h3>
+                                <p>Từ những căn hộ hiện đại, biệt thự biệt lập cho đến những ngôi nhà truyền thống,
+                                    chúng tôi không
+                                    ngừng mở rộng danh sách để đem đến sự lựa chọn đa dạng cho khách hàng.</p></div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-1 col-sm-4 col-xs-12">
+                    <!--#-->
+                </div>
+            </div>
         </div>
-    </div>
+        <!--end_introduce-->
+        <!--end_row-->
+
+    </footer>
 </div>
-<!--end_introduce-->
-<!--end_row-->
-
-
